--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 <div class="half">
-	<span class="h1">First half</span>
+	<timer class="h1" end-time="1420070400000">{{days}} : {{hours}} : {{minutes}} : {{seconds}}</timer>
 </div>
 
 <div class="half">
