first draft as birg suggested (static)

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,10 @@
-<div class="half">
-	<timer class="h1" end-time="1420070400000">{{days}} : {{hours}} : {{minutes}} : {{seconds}}</timer>
-</div>
+<header>
+	<div style="visibility:hidden"><p>PROGRAM</p></div>
+	<div class="active"><p>LYS OG SALT<br>2015</p></div>
+	<div style="visibility:hidden"><p>PÅMELDING</p></div>
+</header>
 
-<div class="half">
-	<span class="h1">Second half</span>
-</div>
+<section>
+	<timer end-time="1435770000000"><h1>{{days}}.{{hhours}}.{{mminutes}}.{{sseconds}}</h1></timer>
+	<footer><p>HEDMARKTOPPEN<br>14.-19. JULI</p></footer>
+</section>
