added info text

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,5 +6,6 @@
 
 <section>
 	<timer end-time="1435770000000"><h1>{{days}}.{{hhours}}.{{mminutes}}.{{sseconds}}</h1></timer>
+	<p>Informasjon om priser og påmelding til Lys & Salt 2015 vil bli tilgjengelig fra 18. januar.</p>
 	<footer><p>HEDMARKTOPPEN<br>14.-19. JULI</p></footer>
 </section>
