Made birgittes sketch (more or less)

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,11 +1,5 @@
-<header>
-	<div style="visibility:hidden"><p>PROGRAM</p></div>
-	<div class="active"><p>LYS OG SALT<br>2015</p></div>
-	<div style="visibility:hidden"><p>PÅMELDING</p></div>
-</header>
-
-<section>
+<section></section>
+<section class="color2">
 	<timer end-time="1435770000000"><h1>{{days}}.{{hhours}}.{{mminutes}}.{{sseconds}}</h1></timer>
 	<p>Informasjon om priser og påmelding til Lys & Salt 2015 vil bli tilgjengelig fra 18. januar.</p>
-	<footer><p>HEDMARKTOPPEN<br>14.-19. JULI</p></footer>
 </section>
