--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 <section></section>
 <section class="color2">
-	<timer end-time="1435770000000"><h1>{{days}}.{{hhours}}.{{mminutes}}.{{sseconds}}</h1></timer>
+	<timer end-time="1435770000000"><h1><span>{{days}}</span>.<span>{{hhours}}</span>.<span>{{mminutes}}</span>.<span>{{sseconds}}</span></h1></timer>
 	<p>Informasjon om priser og påmelding til Lys & Salt 2015 vil bli tilgjengelig fra 18. januar.</p>
 </section>
