--- a/app/views/prices.html
+++ b/app/views/prices.html
@@ -1,4 +1,6 @@
 <section class="color2"></section>
 <section class="color3">
-	<p>priser</p>
+	<h1>Priser</h1>
+	<h5>Stevneavgift, før/etter 15. mai</h5>
+	<p>sf</p><p>sf</p><p>sf</p><p>sf</p><p>sf</p><p>sf</p>
 </section>
