--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -77,7 +77,7 @@ header {
 
 section {
   position: relative;
-  padding:15px 20px 40px 15px;
+  padding:15px 40px 105px 40px;
   overflow:hidden;
   top:0;
   width: 100%;
@@ -89,6 +89,22 @@ section {
   }
   h1{
   	white-space: nowrap;
+  	margin-bottom:0;
+  }
+  .content{
+  	height: 100%;
+  	width:320px;
+  	margin-left:auto;
+  	margin-right:auto;
+  	text-align: left;
+  	overflow:scroll;
+  	p:last-child{
+		margin-bottom:0;
+		padding-bottom:0;
+  	}
+  	h5 {
+  		margin:0;
+  	}
   }
 }
 
