--- a/app/views/prices.html
+++ b/app/views/prices.html
@@ -1,8 +1,8 @@
 <section class="color2"></section>
 <section class="color3">
-	<h1>Priser</h1>
+	<h1>PRISER</h1>
 	<div class="content">
-		<h5>Stevneavgift, før/etter 15. mai</h5>
+		<h6>STEVNEAVGIFT, FØR/ETTER 15.MAI</h6>
 		<p>I motsetning til hva mange tror, er ikke Lorem Ipsum bare tilfeldig tekst. Dets røtter springer helt tilbake til et stykke klassisk latinsk litteratur fra 45 år f.kr., hvilket gjør det over 2000 år gammelt. Richard McClintock - professor i latin ved Hampden-Sydney College i Virginia, USA - slo opp flere av de mer obskure latinske ordene, consectetur, fra en del av Lorem Ipsum, og fant dets utvilsomme opprinnelse gjennom å studere bruken av disse ordene i klassisk litteratur. Lorem Ipsum kommer fra seksjon 1.10.32 og 1.10.33 i "de Finibus Bonorum et Malorum"</p>	
 	</div>
 </section>
