--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -81,7 +81,7 @@ section {
   overflow:hidden;
   top:0;
   width: 100%;
-  height: 50%;
+  min-height: 50%;
   background: white;
   span {
   	display:inline-block;
@@ -92,11 +92,9 @@ section {
   	margin-bottom:0;
   }
   .content{
-  	height: 100%;
   	width:320px;
   	margin-left:auto;
   	margin-right:auto;
-  	overflow:scroll;
   	p {
   		text-align: left;
   	}
