added bottom mask (needs transition fix)

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,3 +2,4 @@
 <section class="color2">
 	<timer end-time="1435770000000"><h1><span>{{days}}</span>.<span>{{hhours}}</span>.<span>{{mminutes}}</span>.<span>{{sseconds}}</span></h1></timer>
 </section>
+<div class="bottom color2"></div>
