--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -105,6 +105,16 @@ section {
   }
 }
 
+.bottom {
+	position:fixed;
+	margin:0;
+	width:100%;
+	height:60px;
+	z-index: 1;
+	bottom:0;
+	left:0;
+}
+
 .color2 {
 	background: #E3D1E6
 }
