--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,6 +5,7 @@
 
 $dark: #392F92;
 $small: 12px;
+$large: 24px;
 
 // GENERAL
 @import url("//hello.myfonts.net/count/2c7e68");
@@ -57,21 +58,16 @@ a:active {
     color: $dark;
 }
 
-.white {
-  color: white;
-}
-
 // AREA SPECIFIC
 header {
 	position: fixed;
-  width:100%;
-  top:0;
-  z-index:10;
+	width:100%;
+	top:0;
+	z-index:10;
 
   div{
-    margin-top: $small;
-    float: left;
-    width: 33.33%;
+    margin-top: $large;
+	width:100%;
   }
 }
 
@@ -105,16 +101,6 @@ section {
   }
 }
 
-.bottom {
-	position:fixed;
-	margin:0;
-	width:100%;
-	height:60px;
-	z-index: 1;
-	bottom:0;
-	left:0;
-}
-
 .color2 {
 	background: #E3D1E6
 }
@@ -132,15 +118,21 @@ footer {
 	bottom:0;
 }
 
-// MOBILE SPECIFIC
-@media all and (max-width: 519px){
-
-
-}
-
 // DESKTOP SPECIFIC
 @media all and (min-width: 520px){
-
+header{
+	div{
+		width:33.33%;
+		position:absolute;
+		margin-top: $small;
+	}
+	div:first-child{
+		left:33.33%;
+	}
+	div:last-child{
+		left:66.66%;
+	}
+}
 
 }
 
