--- a/app/views/prices.html
+++ b/app/views/prices.html
@@ -1,29 +1,48 @@
 <section class="color2"></section>
 <section class="color3">
-	<h1>PRISER</h1>
+	<h1>Info</h1>
 	<article>
-		<h6>STEVNEAVGIFT, FØR/ETTER 15.MAI</h6>
-		<p>I motsetning til hva mange tror, er ikke Lorem Ipsum bare tilfeldig tekst. Dets røtter springer helt tilbake til et stykke klassisk latinsk litteratur fra 45 år f.kr., hvilket gjør det over 2000 år gammelt. Richard McClintock - professor i latin ved Hampden-Sydney College i Virginia, USA - slo opp flere av de mer obskure latinske ordene, consectetur, fra en del av Lorem Ipsum, og fant dets utvilsomme opprinnelse gjennom å studere bruken av disse ordene i klassisk litteratur. Lorem Ipsum kommer fra seksjon 1.10.32 og 1.10.33 i "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) av Cicero, skrevet i år 45 f.kr. Boken er en avhandling om teorier rundt etikk, og var veldig populær under renessansen. Den første linjen av Lorem Ipsum, "Lorem Ipsum dolor sit amet...", er hentet fra en linje i seksjon 1.10.32.</p>
-		
-		<h6>STEVNEAVGIFT, FØR/ETTER 15.MAI</h6>
-		<p>Student: 350/450<br>
-		Enslig: 500/600<br>
-		Par u/barn, enslig med barn: 700/800<br>
-		Familie m/barn: 1150/1300</p>
+		<p>
+			Tid: 14.-19. juli 2015<br>
+			Sted: Hedmarktoppen, Limhusvegen 15, 2315 Hamar<br>
+			Rabatt ved påmelding før 15.mai.<br>
+			Spørsmål? Skriv en mail til <a href="mailto:lysogsalt2014@gmail.com">lysogsalt2014@gmail.com</a>.
+		</p>
 
-		<h6>STEVNEAVGIFT, FØR/ETTER 15.MAI</h6>
-		<p>I motsetning til hva mange tror, er ikke Lorem Ipsum bare tilfeldig tekst. Dets røtter springer helt tilbake til et stykke klassisk latinsk litteratur fra 45 år f.kr., hvilket gjør det over 2000 år gammelt. Richard McClintock - professor i latin ved Hampden-Sydney College i Virginia, USA - slo opp flere av de mer obskure latinske ordene, consectetur, fra en del av Lorem Ipsum, og fant dets utvilsomme opprinnelse gjennom å studere bruken av disse ordene i klassisk litteratur. Lorem Ipsum kommer fra seksjon 1.10.32 og 1.10.33 i "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) av Cicero, skrevet i år 45 f.kr. Boken er en avhandling om teorier rundt etikk, og var veldig populær under renessansen. Den første linjen av Lorem Ipsum, "Lorem Ipsum dolor sit amet...", er hentet fra en linje i seksjon 1.10.32.</p>
+		<h6>NYTT I PÅMELDINGEN I ÅR:</h6>
+		<p>
+			– Dersom et alternativ blir fullt kan du melde deg på venteliste (eget punkt i påmeldingen)<br>
+			– Dersom dere ønsker full pensjon og alternativet ikke har det fra før kan du huke av for det og få litt rabatt
+		</p>
 
-		<h6>STEVNEAVGIFT, FØR/ETTER 15.MAI</h6>
-		<p>Student: 350/450<br>
-		Enslig: 500/600<br>
-		Par u/barn, enslig med barn: 700/800<br>
-		Familie m/barn: 1150/1300</p>
+		<h6>PRISER</h6>
+		<p>
+			STEVNEAVGIFT, FØR/ETTER 15. MAI<br>
+			Student: 350/450<br>
+			Enslig: 500/600<br>
+			Par u/barn, enslig med barn: 700/800<br>
+			Familie m/barn: 1150/1300
+		</p>
 
-		<h6>STEVNEAVGIFT, FØR/ETTER 15.MAI</h6>
-		<p>Student: 350/450<br>
-		Enslig: 500/600<br>
-		Par u/barn, enslig med barn: 700/800<br>
-		Familie m/barn: 1150/1300</p>
+		<p>
+			OVERNATTING (PRISER PER DØGN)<br>
+			Enkeltrom med full pensjon – 760,-<br>
+			Enkeltrom med frokost – 530,-<br> 
+			Dobbeltrom med full pensjon – 670,-(per person)<br>
+			Dobbeltrom med frokost – 450,- (per person)<br>
+			Stor hytte (7 sengeplasser) – 1750,- (per hytte)<br>
+			Liten hytte (4 sengeplasser) – 1200,- (per hytte)<br>
+			Hytte (med person som har valgt stor/liten hytte) – 0,-<br>
+			Stor leilighet (2 rom, 5 sengeplasser) – 1500,- (per leilighet)<br>
+			Liten leilighet (1 rom, 4 sengeplasser) – 1100,- (per leilighet)<br>
+			Leilighet (med person som har valgt stor/liten leilighet) – 0,-<br>
+			Telt – 150,- (per teltplass)<br>
+			Telt (med person som har valgt telt) – 0,-<br>
+			Campingvogn – 300,- (per vognplass)<br>
+			Campingvogn med fortelt – 350,- (per vognplass)<br>
+			Campingvogn (med person som har valgt campingvogn) – 0,-<br>
+			Sovesal – 100,- (per person)
+		</p>
+
 	</article>
 </section>
