--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -1,4 +1,5 @@
 <section class="color3"></section>
 <section class="color4">
-	<p>påmelding</p>
+	<h1>PÅMELDING</h1>
+		<h6>Påmeldingen åpner 14.2 kl 12:00. Link til påmelding legges ut på <a href="facebook.com/lysogsalt2015">facebook-siden vår</a>.</h6>
 </section>
