--- a/app/views/prices.html
+++ b/app/views/prices.html
@@ -1,31 +1,17 @@
 <section class="color2"></section>
 <section class="color3">
-	<h1>Info</h1>
+	<h1>PRISER</h1>
 	<article>
+		<h6>STEVNEAVGIFT, FØR/ETTER 15. MAI</h6>
 		<p>
-			Tid: 14.-19. juli 2015<br>
-			Sted: Hedmarktoppen, Limhusvegen 15, 2315 Hamar<br>
-			Rabatt ved påmelding før 15.mai.<br>
-			Spørsmål? Skriv en mail til <a href="mailto:lysogsalt2014@gmail.com">lysogsalt2014@gmail.com</a>.
-		</p>
-
-		<h6>NYTT I PÅMELDINGEN I ÅR:</h6>
-		<p>
-			– Dersom et alternativ blir fullt kan du melde deg på venteliste (eget punkt i påmeldingen)<br>
-			– Dersom dere ønsker full pensjon og alternativet ikke har det fra før kan du huke av for det og få litt rabatt
-		</p>
-
-		<h6>PRISER</h6>
-		<p>
-			STEVNEAVGIFT, FØR/ETTER 15. MAI<br>
 			Student: 350/450<br>
 			Enslig: 500/600<br>
 			Par u/barn, enslig med barn: 700/800<br>
 			Familie m/barn: 1150/1300
 		</p>
-
+		
+		<h6>OVERNATTING (PRISER PER DØGN)</h6>
 		<p>
-			OVERNATTING (PRISER PER DØGN)<br>
 			Enkeltrom med full pensjon – 760,-<br>
 			Enkeltrom med frokost – 530,-<br> 
 			Dobbeltrom med full pensjon – 670,-(per person)<br>
@@ -42,6 +28,15 @@
 			Campingvogn med fortelt – 350,- (per vognplass)<br>
 			Campingvogn (med person som har valgt campingvogn) – 0,-<br>
 			Sovesal – 100,- (per person)
+		</p>
+		
+		<h6>MÅLTIDER</h6>
+		<p>
+			Frokost: 75<br>
+			Lunsj: 120<br>
+			Middag: 140<br>
+			Full pensjon: 300 pr dag pr person – avkryssing i påmeldingsskjema eller kjøp på stedet.<br>
+			Enkeltmåltider: skriv i kommentarfeltet når du melder deg på eller kjøpes på stedet senest dagen før
 		</p>
 
 	</article>
