--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -1,5 +1,5 @@
 <section class="color3"></section>
 <section class="color4">
 	<h1>PÅMELDING</h1>
-		<h6>Påmeldingen åpner 14.2 kl 12:00. Link til påmelding legges ut på <a href="facebook.com/lysogsalt2015">facebook-siden vår</a>.</h6>
+		<timer end-time="1423911600000"><p><div ng-hide="(ddays === '00') && (hhours === '00') && (mminutes === '00') && (sseconds === '00')">Påmeldingen åpner 14.02.2015 kl 12:00</div><a href="http://signuplink.com" ng-show="(ddays === '00') && (hhours === '00') && (mminutes === '00') && (sseconds === '00')">Klikk her for å melde deg på!</a></p></timer>
 </section>
