--- a/app/views/prices.html
+++ b/app/views/prices.html
@@ -1,43 +1,67 @@
 <section class="color2"></section>
 <section class="color3">
-	<h1>PRISER</h1>
+	<h1>PRISER OG INFO</h1>
 	<article>
-		<h6>STEVNEAVGIFT, FØR/ETTER 15. MAI</h6>
+		<h6>STEVNEAVGIFT MED PÅMELDING FØR 10. JUNI - OG BETALING INNEN 15. JUNI</h6>
 		<p>
-			Student: 350/450<br>
-			Enslig: 500/600<br>
-			Par u/barn, enslig med barn: 700/800<br>
-			Familie m/barn: 1150/1300
+			Student, pensjonist, ufør: 350,-<br>
+			Enslig: 500,-<br>
+			Par uten barn, enslig med barn: 700,-<br>
+			Familie m/barn: 1150,-
+		</p>
+
+		<h6>STEVNEAVGIFT MED PÅMELDING ETTER 10. JUNI - OG BETALING INNEN 8. JULI</h6>
+		<p>
+			Student, pensjonist, ufør: 450,-<br>
+			Enslig: 560,-<br>
+			Par uten barn, enslig med barn: 800,-<br>
+			Familie m/barn: 1300,-
+		</p>
+
+		<h6>OBS:</h6>
+		<p>
+			Fakturautsendingen stenges etter 8. juli siden det ikke er tid og kapasitet til å sende ut faktura og sjekke betaling de siste dagene før konferansen. De som ikke har meldt seg på innen 8. juli kan fortsatt gjøre dette her og betale når de kommer. <strong>Dette vil koste 100,- ekstra per påmelding.</strong>
+		</p>
+
+		<p>
+			Påmeldingen er bindende etter at stevneavgiften er betalt. Det betyr at ved avmelding refunderes ikke stevneavgiften, kun overnatting/mat. Dersom stevneavgiften ikke betales innen fristen på fakuturaen, kan påmeldingen ansees som ugyldig. Alle over 18 år må selv registrere seg på et eget påmeldingsskjema, og betale stevneavgift. Vi ønsker at alle betaler hele beløpet (stevneavgift og overnatting/mat) på forhånd når dere får tilsendt faktura.
+		</p>
+
+		<p>
+			Ekstra måltider på Hedmarktoppen kan kjøpes i Hedmarktoppens egen resepsjon.
+		</p>
+
+		<p>
+			Henvendelser i forbindelse med påmeldingen kan sendes til:<br> 
+			<a href="mailto:lysogsalt@folkmedia.no">lysogsalt@folkmedia.no</a><br>
+			Spørsmål besvares så fort som mulig. Ta kontakt dersom du ikke har fått svar på 5 dager, da kan spørsmålet ha blitt oversett.
 		</p>
 		
 		<h6>OVERNATTING (PRISER PER DØGN)</h6>
 		<p>
-			Enkeltrom med full pensjon – 760,-<br>
-			Enkeltrom med frokost – 530,-<br> 
-			Dobbeltrom med full pensjon – 670,-(per person)<br>
-			Dobbeltrom med frokost – 450,- (per person)<br>
-			Stor hytte (7 sengeplasser) – 1750,- (per hytte)<br>
-			Liten hytte (4 sengeplasser) – 1200,- (per hytte)<br>
-			Hytte (med person som har valgt stor/liten hytte) – 0,-<br>
-			Stor leilighet (2 rom, 5 sengeplasser) – 1500,- (per leilighet)<br>
-			Liten leilighet (1 rom, 4 sengeplasser) – 1100,- (per leilighet)<br>
-			Leilighet (med person som har valgt stor/liten leilighet) – 0,-<br>
-			Telt – 150,- (per teltplass)<br>
-			Telt (med person som har valgt telt) – 0,-<br>
-			Campingvogn – 300,- (per vognplass)<br>
-			Campingvogn med fortelt – 350,- (per vognplass)<br>
-			Campingvogn (med person som har valgt campingvogn) – 0,-<br>
-			Sovesal – 100,- (per person)
-		</p>
-		
-		<h6>MÅLTIDER</h6>
-		<p>
-			Frokost: 75<br>
-			Lunsj: 120<br>
-			Middag: 140<br>
-			Full pensjon: 300 pr dag pr person – avkryssing i påmeldingsskjema eller kjøp på stedet.<br>
-			Enkeltmåltider: skriv i kommentarfeltet når du melder deg på eller kjøpes på stedet senest dagen før
+			Enkeltrom med full pensjon - 760,-<br>
+			Enkeltrom med frokost - 530,-<br>
+			Dobbeltrom med full pensjon - 670,- (per person)<br>
+			Dobbeltrom med frokost - 450,- (per person)<br>
+			Trippeltrom med full pensjon - 670,- (per person)<br>
+			Trippeltrom med frokost - 450,- (per person)<br>
+			Stor hytte (7 sengeplasser) 1750,-  (per hytte)<br>
+			Liten hytte (4 sengeplasser) 1200,-  (per hytte)<br>
+			Hytte (sammen med person som har valgt hytte) 0,-<br>
+			Stor leilighet (2 rom, 5 sengeplasser) 1500,- (per leilighet)<br>
+			Liten leilighet (1 rom, 4 sengeplasser) 1100,- (per leilighet)<br>
+			Leilighet (sammen med person i stor/liten leilighet) 0,-<br>
+			Telt - 150,- (per teltplass)<br>
+			Telt (sammen med person som har valgt telt) - 0,-<br>
+			Campingvogn, bobil - 300,- (per vognplass)<br>
+			Campingvogn, bobil med fortelt - 350,- (per vognplass)<br>
+			Campingvogn (sammen med person som har valgt campingvogn) - 0,-<br>
+			Sovesal - 150,- (per person)
 		</p>
 
+		<p>
+			Aldersrabatter: Barn under fylte 12 år halv pris. Barn under fylte 3 år gratis. Dette gjelder overnattinger og måltider.
+		</p>
+		
 	</article>
 </section>
