martin-update på program (texas)

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,5 @@
 <section></section>
 <section class="color2">
-	<timer end-time="1436893200000"><h1><span>{{days}}</span>.<span>{{hhours}}</span>.<span>{{mminutes}}</span>.<span>{{sseconds}}</span></h1></timer>
+	<timer end-time="1436895000000"><h1><span>{{days}}</span>.<span>{{hhours}}</span>.<span>{{mminutes}}</span>.<span>{{sseconds}}</span></h1></timer>
+  <h6>Se <a href="//www.facebook.com/Lysogsalt">facebook-siden</a> vår for oppdatert info!</h6>
 </section>
