--- a/app/views/prices.html
+++ b/app/views/prices.html
@@ -14,38 +14,75 @@
 
     <h6>Tirsdag 14.7</h6>
     <p>
-      Kveldsmøte med Keri Jones - «evangeliet i ånd og kraft»
+      18:00 – Kveldsbønn før kveldsmøtet<br>
+      19:30-21:30 – Åpningsmøte<br>
+      22:00 - Ungdom: grilling i ungdomsteltet
     </p>
 
     <h6>Onsdag 15.7</h6>
     <p>
-      Fellesseminar: «Kristent verdensbilde - forstå Guds verden»
+      07:00 – Morgenbønn<br>
+      09:00 – Bønnesamling før møtet<br>
+      10:00-10:30 – Felles lovsang for hele familien<br>
+      10:45-12:45 – Felles seminar: Kristent verdensbilde, hva betyr "på jorden slik som i himmelen"? v/ Håvard Kjøllesdal<br>
+      (Barnesamlinger samtidig som fellesseminar)<br>
+      13:00 – Lunsj<br>
+      14:00-15:30 – Verksted 1: Å leve i bønn v/ Sara Adekoya (Ungdom: teambuilding i ungdomsteltet)<br>
+      16:30-18:00 - Verksted 2: Apologetikk – hvordan forsvare og argumentere for troen v/ Børge Bentsen<br>
+      19:30-21:30 – Kveldssamling<br>
+      22:00-23:30 - Ungdom: kveldsevent i ungdomsteltet
     </p>
 
     <h6>Torsdag 16.7</h6>
     <p>
-      Temadag med «En dag» om kampen mot moderne slaveri og menneskehandel.
-      Seminar med Andreas Nordli - «Jesus ut til alle»
+      07:00 – Morgenbønn<br>
+      09:00 – Bønnesamling før møtet<br>
+      10:00-10:30 – Felles lovsang for hele familien<br>
+      10:45-12:45 – Felles seminar: Del 1: Moderne slaveri og menneskehandel v/ "En Dag" - Randi Espegren, Del 2: Å gjøre alle folkeslag til disipler v/ Andreas Nordli, daglig leder i UiO<br>
+      (Barnesamlinger samtidig som fellesseminar)<br>
+      13:00 – Lunsj<br>
+      14:00-15:30 – Fotballturnering for barn fra 5 år, verksted 3: Bønneverksted (Ungdom: bading)<br>
+      16:30-18:00 - Verksted 4: Bibelen v/ Finn Olav Jøssang, verksted 5: Om mentoring og motivasjon v/ Albert Hoekstra<br>
+      18:00 - Kveldsbønn<br>
+      19:30-21:30 – Kveldssamling<br>
+      22:00-23:30 - Ungdom: kveldsevent i ungdomsteltet
     </p>
 
     <h6>Fredag 17.7 (seminardag)</h6>
     <p>
-      – Familie og medier<br/>
-      – Profetisk perspektiv<br/>
-      – Formidle evangeliet<br/>
-      – Kristen arbeidsetikk og positiv innflytelse<br/>
+      07:00 – Morgenbønn<br>
+      09:00 – Bønnesamling før møtet<br>
+      10:00-10:30 – Felles lovsang for hele familien (Ungdom: egen samling i ungdomsteltet)<br>
+      10:45-12:45 – Seminarer: 1. Nå ut, 2. Familie, 3. Samfunn, 4. Leve i det profetiske<br>
+      (Barnesamlinger samtidig som fellessamling)<br>
+      13:00 – Lunsj<br>
+      14:00 - Fotballturnering<br>
+      14:00-15:30 – Verksted 6: Bønn, verksted 7: om mentoring og motivasjon, verksted 8: Hvem former hvem? v/ Linda Askeland fra Familie og medier<br>
+      16:30-18:00 - Verksted 4: Bibelen v/ Finn Olav Jøssang, verksted 5: Om mentoring og motivasjon v/ Albert Hoekstra<br>
+      18:00 - Kveldsbønn<br>
+      19:30-21:30 – Kveldssamling<br>
+      22:30-23:30 - Ungdom: kveldsevent i ungdomsteltet
     </p>
 
     <h6>Lørdag 18.7</h6>
     <p>
-      «Fra visjon til handling»
+      07:00 – Morgenbønn<br>
+      09:00 – Bønnesamling før møtet<br>
+      10:00-10:30 – Felles lovsang for hele familien<br>
+      10:45-12:45 – Felles seminar: Fra visjon til handling<br>
+      (Barnesamlinger samtidig som fellesseminar)<br>
+      13:00 – Felles grilling<br>
+      14:00 - Volleyballturnering, kubbturnering<br>
+      18:00 - Kveldsbønn<br>
+      19:30-21:30 – Kveldssamling<br>
+      22:30-23:30 - Ungdom: kveldsevent i ungdomsteltet
     </p>
 
     <h6>Søndag 19.7</h6>
     <p>
-      Gudstjeneste med utsendelse
+      07:00 – Morgenbønn<br>
+      09:00 – Bønnesamling før møtet<br>
+      10:00-12:45 – Avslutning og utsendelse
     </p>
-
-    <p>Egne ungdoms- og barneopplegg med seminarer og aktiviteter.</p>
 	</article>
 </section>
